--- a/styles/rsvp.css
+++ b/styles/rsvp.css
@@ -7,8 +7,6 @@
 
 /* Styles généraux */
 body {
-    height: 85vh;
-    overflow: hidden;
     font-family: 'Quicksand', sans-serif;
     font-weight: 300;
     line-height: 1.6;
@@ -121,7 +119,7 @@ nav ul li a:hover::after {
         height: 2px; /* Hauteur des lignes */
         background-color: #d1c8ff; /* Couleur des lignes */
         margin: 6px 0; /* Espacement entre les lignes */
-        transition: transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
+        transition: transform 1s ease, opacity 1s ease, background-color 1s ease;
     }
 
     .menu-toggle.active span:nth-child(1) {
@@ -175,7 +173,7 @@ nav ul li a:hover::after {
 
 /* Section principale */
 main {
-    height: 100%;
+    height: 85vh;
     display: flex;
     align-items: center;
     background-image: url("../assets/bg3.png");
